# fastApi_basic

./: admin.py  db.py  main.py  models.py  pyproject.toml
templates/: user-detail.html  user-list.html
